testing minor change

--- a/templates/landing/main.html
+++ b/templates/landing/main.html
@@ -5,6 +5,6 @@
     <title>Landing</title>
 </head>
 <body>
-<h1>Docker deploy on Digital Ocean</h1>
+<h1>Docker deploy on Digital Ocean!</h1>
 </body>
 </html>
